--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,5 @@
 python-dotenv
 pvporcupine==3.0.5
 pvrecorder==1.2.7
-livekit
-livekit-agents
-openai
-asyncio
-aiohttp
-websockets
-numpy
-sounddevice
-soundfile
+livekit-agents[openai,deepgram,cartesia,silero,turn-detector]~=1.0
+livekit-plugins-noise-cancellation~=0.2
